# shader-compiler

./: .gitmodules  CMakeLists.txt  README.md
docs/: notes.md  program_structure.md
shaders/: colorutils.glsl  complex.glsl  fragment_shader.glsl  function_plot.glsl  mandlebrot_shader.glsl  mandlebrot_utils.glsl  moving_vertex.glsl  topology.glsl  vertex_shader.glsl
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/compiler/compiler/: compiler.cpp  compiler.h
src/compiler/preprocessor/: preprocessor.cpp  preprocessor.h
src/compiler/shader_source/: shader_source.cpp  shader_source.h
src/loader/: loader.cpp  loader.h
